# ED9ModManager

./: CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md  xinput_proxy.def
ed9_dat/: ed9_dat.cpp  ed9_dat.hpp
examples/battle_probe/: battle_probe.cpp
examples/event_starter/: event_starter.cpp
examples/player_pos_get/: player_pos_get.cpp
examples/scene_probe/: scene_probe.cpp
examples/scene_redirect/: scene_redirect.cpp
examples/script_inject/: script_inject.cpp
src/: command_console.cpp  command_console.h  crash_logger.cpp  crash_logger.h  ed9loader_api.h  plugin_loader.cpp  plugin_loader.h  runtime_locator.cpp  runtime_locator.h  safe_scan.cpp  safe_scan.h  xinput_proxy.cpp
src/modkit/: bjson_decoder.cpp  bjson_decoder.h  bjson_patcher.cpp  bjson_patcher.h  fpac_reader.cpp  fpac_reader.h  generic_tbl.cpp  generic_tbl.h  mod_merge_orchestrator.cpp  mod_merge_orchestrator.h  modkit_test.cpp  patch_config.cpp  patch_config.h  scene_inject.cpp  scene_inject.h  scene_merge.cpp  scene_merge.h  scene_schema.h  sora1_tbl_schemas.json  sora1_tbl_schemas_embedded.h  tbl_codec.cpp  tbl_codec.h  tbl_merge.cpp  tbl_merge.h  tbl_schema.cpp  tbl_schema.h
tools/: embed_schema.py
tools/mod_manager/: app_icon.rc  cli_launcher.cpp  mod_manager.cpp  resource.h
